--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,22 +12,26 @@ logging:
   level:
     org:
       springframework:
-        security: DEBUG
-
+        security: INFO
 spring:
   main:
     banner-mode: "off"
   datasource:
-    url: jdbc:postgresql://localhost:5432/order
-    username: postgres
-    password: password
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:dbuser}
+    username: ${DB_USER:dbuser}
+    password: ${DB_PASSWORD:dbpassword}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: none
     show-sql: false
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+          lob:
+            non_contextual_creation: true
+liquibase:
+  enabled: true
+  change-log: classpath:/changelog/changelog-master.yaml
