--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,35 +1,18 @@
-server:
-  error:
-    include-message: always
-    include-binding-errors: always
-    include-exception: false
-    include-stacktrace: never
-    include-path: never
-    include-code: never
-    include-timestamp: always
-    include-binding-errors-field: false
 logging:
   level:
+    root: "off"
     org:
       springframework:
-        security: DEBUG
-
+        security: WARN
 spring:
   main:
     banner-mode: "off"
   datasource:
-    url: jdbc:h2:mem:mydb/order
+    url: jdbc:h2:mem:order
     username: sa
     password: password
     driver-class-name: org.h2.Driver
-  jackson:
-    serialization:
-      fail-on-empty-beans: false
   jpa:
     hibernate:
       ddl-auto: create-drop
-    show-sql: false
-    properties:
-      hibernate:
-        format_sql: true
-    database-platform: org.hibernate.dialect.H2Dialect
+      dialect: org.hibernate.dialect.H2Dialect
